@@ -1,5 +1,9 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method("[",calculated)
+S3method("[",measured)
+S3method("[<-",calculated)
+S3method("[<-",measured)
 S3method(format,calculated)
 S3method(format,measured)
 S3method(print,calculated)
